build : build.gradle에 mybatis, mysql 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,33 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	// 스프링 시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// oauth
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// mybatis & mysql
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	implementation 'com.mysql:mysql-connector-j:8.0.33'
+
+	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//test코드
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
